Study Case 1/RestfulAPI_Synchronus/K8S/authserver-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authserver-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authserver
  template:
    metadata:
      labels:
        app: authserver
    spec:
      containers:
      - name: authserver
        image: irvan124/authserver:latest
---
apiVersion: v1
kind: Service
metadata:
  name: authserver-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: authserver
  ports:
  - name: authserver
    protocol: TCP
    port: 80
    targetPort: 80
