Study Case 1/RestfulAPI_Synchronus/K8S/paymentservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paymentservice-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paymentservice
  template:
    metadata:
      labels:
        app: paymentservice
    spec:
      containers:
      - name: paymentservice
        image: irvan124/paymentservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: paymentservice-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: paymentservice
  ports:
  - name: paymentservice
    protocol: TCP
    port: 80
    targetPort: 80
